// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test rate change 1`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--active\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test rate disabled 1`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--disabled\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--disabled\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--disabled\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--disabled\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--disabled\\"></i></div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test rate half change 1`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--active\\"></i></div>
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--right-rate m-rate--active\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--right-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--right-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--right-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
      <div class=\\"m-rate__rate-item m-rate--half m-rate--normal-half-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--right-rate\\"></i></div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test rate mouse event 1`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test rate mouse event 2`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate m-rate--active\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test rate mouse event 3`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test rate readonly 1`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test rate validation 1`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active m-rate--error\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active m-rate--error\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active m-rate--error\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active m-rate--error\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active m-rate--error\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
  </div>
  <div class=\\"m-form-details\\">必须选择5分</div>
</div>"
`;

exports[`test rate validation 2`] = `
"<div class=\\"m-form-item\\" rate-cover=\\"true\\">
  <div class=\\"m-rate__rates\\">
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
    <div class=\\"m-rate__rate-wrapper m-rate--active\\">
      <div class=\\"m-rate__rate-item m-rate--normal-rate\\"><i rate-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-star m-rate__rate m-rate--left-rate\\"></i></div>
    </div>
  </div>
  <!---->
</div>"
`;
